--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
       </div>
     </section>
 
-    <section class="section-four">
+    <!-- <section class="section-four">
       <div class="container">
         <div class="section-four__tiltle">
           <h1 class="section-four__title--content">Túi | Bag</h1>
@@ -581,7 +581,7 @@
         </div>
         
       </div>
-    </section>
+    </section> -->
 
     <section class="section-five">
       <div class="container">
